# DIO

./: .gitignore  README.md  profile.json
python_data_analytics/: pyproject.toml
python_data_analytics/01_Básico/: convertendo_tipos.py  estruturas_condicionais.py  estruturas_de_repeticao.py  operadores_associacao.py  operadores_comparacao.py  operadores_identidade.py  operadores_logicos.py  tiposdedados.py  variaveis_constantes.py
python_data_analytics/02_Intermediario/Desafios/: code_miners.py  encaixa_nao_encaixa.py  months.py  numero_telefone.py  plano_operadora.py  promocao_mercado.py  qual_animal.py
python_data_analytics/02_Intermediario/Estrutura de dados/: conjuntos.py  funcoes.py  listas.py  tuplas.py
python_data_analytics/03_POO/: 01_bicicletaria.py  01_construtores_destrutores.py  02_encapsulamento.py  02_metodos_estaticos.py  02_polimorfismo.py  02_propriedades.py  02_propriedades_pessoa.py  03_decoradores_parametros.py  03_iteradores.py  04_data_hora.py  04_strftime_strptime.py  04_timedelta.py  04_timezones.py  04_timezones_pytz.py  05_boas_praticas.py  05_manipulacao_arquivos.py  05_manipulacao_diretorios.py  06_boas_praticas.py  06_gerenciamento_pacotes.py  lorem.txt  teste.txt
python_data_analytics/03_POO/Desafios/: bancov3.py  bancov6.py  clientes.csv  fazer_chamadas.py  usuario_telefone.py
python_data_analytics/04_Bancos de Dados/Desafios/Integracao_SQLite_MongoDB/: __init__.py  integracao_mongodb.py  integracao_sqlite.py
python_data_analytics/04_Bancos de Dados/PyMongo/IntegrationWithMongo/: pyMongo2.py
python_data_analytics/04_Bancos de Dados/PythonDB/: 02_sql_injection.py  03_transacao.py
python_data_analytics/04_Bancos de Dados/SQLAlchemy/IntegrationWithSQL/: meu_banco.db  sqlAlchemyCoreApplication.py
python_data_analytics/05_Tratamento de Dados/Desafio/: ProjetoPandas.ipynb  SuperStoreUS-2015.xlsx
python_data_analytics/05_Tratamento de Dados/Pacotes e Distribuições/sqlite2mongo-package/: README.md  pyproject.toml  setup.py
python_data_analytics/05_Tratamento de Dados/Pacotes e Distribuições/sqlite2mongo-package/sqlite2mongo/: __init__.py  mongo_app.py  sqlite_app.py
python_data_analytics/05_Tratamento de Dados/Pandas/: 01_analise_dados.py  02_pandas_excel.py  03_manipulando_datas.py  04_visualizacao_dados.py  dataframe_curso.xlsx
python_data_analytics/06_Segurança da Informação/Ferramentas Adicionais/: abrir_navegador.py  ocultador_arquivos.py  verificador_ip_externo.py  verificador_telefone.py
python_data_analytics/06_Segurança da Informação/Hashs e Threads/: comparador_hash.py  gerador_senhas.py  ips.py  threads.py
python_data_analytics/06_Segurança da Informação/Ping/: ping_multiplo.py  ping_simples.py
python_data_analytics/06_Segurança da Informação/Socket/: client_tcp.py  client_udp.py  server_udp.py
python_data_analytics/06_Segurança da Informação/Web Scraping e Crawler/: gerador_hash.py  gerador_wordlist.py  web_crawler.py  web_scraping.py  wordlist.txt
python_data_analytics/07_Desenvolvimento Web/Django/mysite/: build.sh  pyproject.toml
python_data_analytics/07_Desenvolvimento Web/Django/mysite/accounts/: urls.py  views.py
python_data_analytics/07_Desenvolvimento Web/Django/mysite/contacts/: forms.py  models.py  urls.py  views.py
python_data_analytics/07_Desenvolvimento Web/FastApi/dio_blog/: pyproject.toml
python_data_analytics/07_Desenvolvimento Web/Flask/: atividades.db  requirements.txt
python_data_analytics/07_Desenvolvimento Web/Flask/01_Primeira aplicação/: run.py
python_data_analytics/07_Desenvolvimento Web/Flask/02_Primeira API/: run.py
python_data_analytics/07_Desenvolvimento Web/Flask/03_Dev API/: app.py
python_data_analytics/07_Desenvolvimento Web/Flask/04_APIs Restful/: app.py  habilidades.py
python_data_analytics/07_Desenvolvimento Web/Flask/05_SQL Alchemy/: app.py  models.py  utils.py
python_data_analytics/07_Desenvolvimento Web/Flask/Desafios/: API_lista_tarefas.py  fastapi_json.py
python_data_analytics/07_Desenvolvimento Web/Flask/dio_bank/: README.md  pyproject.toml
python_data_analytics/07_Desenvolvimento Web/Flask_2/dio_bank/: app.py  pyproject.toml
python_data_analytics/Basico/: identacao_bloco.py  operadores_aritmeticos.py  operadores_atribuicao.py  print_input.py
python_data_analytics/Intermediario/Desafios/: bancov1.py  bancov2.py  dragon_ball.py  lista_ativos.py  lista_equipamentos.py  passos_explorador.py  senhas_fortes.py  tweet_mute.py
python_data_analytics/Intermediario/Estrutura de dados/: dicionarios.py  listas.py
python_data_analytics/Intermediario/Manipulação de strings/: string1.py  string2.py  string3.py  string4.py
python_data_analytics/POO/: 01_heranca_multipla.py  01_heranca_simples.py  02_atributos_classe_instancia.py  02_classes_abstratas.py  03_decoradores.py  03_geradores.py  05_manipulacao_csv.py  05_manipulacao_escrita.py  05_tratamento_erro_arquivos.py  arquivo-utf-8.txt
python_data_analytics/POO/Desafios/: bancov4.py  bancov5.py  bancov6.py  clientes.csv  log.txt  plano_telefone.py
python_data_analytics/PythonDB/: 01_dbapi.py
python_data_analytics/SGBDs com Python/Desafios/.env/: pyvenv.cfg
python_data_analytics/SGBDs com Python/Desafios/.env/Scripts/: activate  (+1 more)
python_data_analytics/SGBDs com Python/Desafios/Integracao_SQLite_MongoDB/: integracao_mongodb.py  integrando_mongodb.py  integrando_sqlite.py  sqlite.db
python_data_analytics/SGBDs com Python/PyMongo/.env/: pyvenv.cfg
python_data_analytics/SGBDs com Python/PyMongo/IntegrationWithMongo/: pyMongo2.py  pyMongoApplication.py
python_data_analytics/SGBDs com Python/PythonDB/: meu_banco.db
python_data_analytics/SGBDs com Python/SQLAlchemy/.env/: pyvenv.cfg
python_data_analytics/SGBDs com Python/SQLAlchemy/IntegrationWithSQL/: sqlAlchemyApplication.py
python_data_analytics/ambiente_virtual/: pyproject.toml
(+454 files in other folders)
