[tool.poetry]
name = "python-data-analytics"
version = "0.1.0"
description = ""
authors = ["Gabryel_Brz <gabrielbarbosa.alternativa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
