[tool.poetry]
name = "dio-bank"
version = "0.1.0"
description = "project to study the framework Flask"
authors = ["Gabryel_Brz <gabrielbarbosa.alternativa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask-migrate = "^4.1.0"
flask-jwt-extended = "^4.7.1"
gunicorn = "^23.0.0"
psycopg = "^3.2.5"
flask-bcrypt = "^1.0.1"
flask-marshmallow = "^1.3.0"
marshmallow-sqlalchemy = "^1.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
addopts = "-ra -vvv"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.format]
quote-style = "single"
